--- a/requirements.txt
+++ b/requirements.txt
@@ -91,9 +91,9 @@ supafunc==0.5.1
 sympy==1.13.3
 threadpoolctl==3.5.0
 tokenizers==0.21.0
-torch==2.5.1+cu121
-torchaudio==2.5.1+cu121
-torchvision==0.20.1+cu121
+torch==2.5.1
+torchaudio==2.5.1
+torchvision==0.20.1
 tqdm==4.67.1
 transformers==4.47.1
 triton==3.1.0
